objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doctor_Email__c</fullName>
        <label>Doctor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Doctorr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Doctorr</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Appointment</relationshipLabel>
        <relationshipName>Appointment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patientt__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patientt</label>
        <referenceTo>Patients__c</referenceTo>
        <relationshipLabel>Appointment</relationshipLabel>
        <relationshipName>Appointment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>confirmed</fullName>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>isOneDayBeforeDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOneDayBeforeDate</label>
        <type>Checkbox</type>
    </fields>
    <label>Appointment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appoitment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>